# MCP-Receipe-Medical

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
clients/: test_client.py
src/mcp_recipe_server/: config.py  logmeal_client.py  main.py  nutrition_tools.py  recipe_tools.py
